Parent pull and log ui updated